Fix horizontal overflow in attachment previews (#44029).
Patch by Mizuki ISHIKAWA (user:ishikawa999).


git-svn-id: https://svn.redmine.org/redmine/trunk@24675 e93f8b46-1217-0410-a6f0-8f06a7374b81

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -2553,6 +2553,7 @@ img {
   border: 1px solid var(--oc-gray-4);
   border-radius: 3px;
   box-shadow: 0 1px 2px rgba(var(--oc-gray-9-rgb), 0.05);
+  overflow-x: auto;
 }
 
 .pdf-full-view-link { margin: 0 0 0.5em; }
